--- a/bases_arch/packages/orchestration/mediator_portal/package.json
+++ b/bases_arch/packages/orchestration/mediator_portal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api_gateway",
+  "name": "mediator_portal",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.11.1",
+    "@grpc/proto-loader": "^0.7.13",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.1",
